# ChangeLog for app-xemacs/latin-unity
# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/latin-unity/ChangeLog,v 1.20 2009/02/20 00:13:35 fauli Exp $

*latin-unity-1.22 (10 Jul 2014)

  10 Jul 2014; Mats Lidell <matsl@gentoo.org> +latin-unity-1.22.ebuild,
  +metadata.xml:
  Pre release version bump.
