@@ -1,1 +1,2 @@
 DIST latin-unity-1.22-pkg.tar.gz 108448 SHA256 8e3ff10757396ca22c8ec364e213f4aa524fc19047b7d258919df44c08fa5d0d SHA512 c74e641fad13baabe1b6febde2555584ddc97b5cd4788e58dfc542cad3fd2c45d677af6040119f0d4e41a248e02f58a1940881e4463e5ba7457041829e989a1d WHIRLPOOL c62dc1817e60a99e5858b4ff4eb5a1c1516e9364c792dc190db1d81b4bc0a527bcfaf3ee70da02ba279f2dd764975dbe0ef770db08e2c684ef21c1ca0b135b4d
+DIST latin-unity-1.23-pkg.tar.gz 108199 SHA256 2e4ef3c46a8896476092d06c083a248cd510a2ae6d464cd241c6c140e0b3429c SHA512 1702e26054ea2f052a340b42b17ce7c686bdf1b46b8c246ab53d78ca2b9d4b54ee5dce66d6621b9fb398df624b2203b34c912e57a84ef9e9700c999f9e6c4915 WHIRLPOOL 100a4d696384b44853dfd9d43437efa3a40ff040063c54cd63293e55d04e9636ba4f10a77ec13482f592f5a1ad075c4eccf63041f1702bf068b8b7ae497ae20c
